# serializer version: 1
# name: test_Swin2SR_2x
  ImageModelDescriptor(
    architecture=Swin2SRArch(
      id='Swin2SR',
      name='Swin2SR',
    ),
    input_channels=3,
    bytes=48366284,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w8',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_Swin2SR_4x
  ImageModelDescriptor(
    architecture=Swin2SRArch(
      id='Swin2SR',
      name='Swin2SR',
    ),
    input_channels=3,
    bytes=48957132,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w8',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_Swin2SR_compressed
  ImageModelDescriptor(
    architecture=Swin2SRArch(
      id='Swin2SR',
      name='Swin2SR',
    ),
    input_channels=3,
    bytes=48978392,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's48w8',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_Swin2SR_jpeg
  ImageModelDescriptor(
    architecture=Swin2SRArch(
      id='Swin2SR',
      name='Swin2SR',
    ),
    input_channels=1,
    bytes=47347060,
    output_channels=1,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's126w7',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_Swin2SR_lightweight_2x
  ImageModelDescriptor(
    architecture=Swin2SRArch(
      id='Swin2SR',
      name='Swin2SR',
    ),
    input_channels=3,
    bytes=4021392,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w8',
      '60dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
